# ambiguity-framework

./: .gitignore  LICENSE  README.md  gitignore  main.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
ambiguity_suite/: AAF1.py  AAMass.py  AAPR.py  AARange.py  __init__.py  utils.py
ambiguity_suite.egg-info/: SOURCES.txt  requires.txt  top_level.txt
ambiguity_suite/ambiguity_suite.egg-info/: PKG-INFO  SOURCES.txt
data/processed/: heart.pkl  nslkdd.pkl  readmissions.pkl
data/raw/: README.md
experiments/: _runner_base.py  data_loader.py  plot_graphical_abstract.py  plot_reliability.py  run_aamass_tstar.py  run_all_real.py  run_bootstrap_ci.py  run_bootstrap_ci_fast.py  run_brfss.py  run_calibrated_aamass.py  run_calibration_ablation.py  run_credit.py  run_entropy_comparison.py  run_heart.py  run_nslkdd.py  run_paired_tests.py  run_readmissions.py  run_synthetic.py  run_uci_credit.py
experiments/configs/: experiment_grid.yaml
results/tables/: aamass_tstar_summary.csv  bootstrap_ci_fast.csv  brfss_results.csv  calibrated_aamass_summary.csv  calibration_ablation_summary.csv  creditcard_results.csv  entropy_comparison_summary.csv  heart_results.csv  nslkdd_results.csv  paired_tests_summary.csv  readmissions_results.csv  real_summary.csv  synthetic_results.csv  synthetic_summary.csv  uci_credit_results.csv
tests/: test_AAF1.py  test_AAMass.py  test_AAPR.py  test_metrics.py
