[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ambiguity-suite"
version = "0.1.0"
description = "Ambiguity Area metrics for post-hoc binary classification audit"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Kian Maleki", email = "mma60301@creighton.edu" }
]
requires-python = ">=3.8"
dependencies = [
  "numpy>=1.24",
  "scikit-learn>=1.3",
]

[project.optional-dependencies]
experiments = [
  "xgboost>=2.0",
  "pandas>=2.0",
  "pyyaml>=6.0",
  "matplotlib>=3.7",
]
dev = [
  "pytest",
  "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/kianushmaleki/ambiguity-framework"

[tool.setuptools.packages.find]
where = ["."]
include = ["ambiguity_suite*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
